z-index issue for touch enabled devices
rancher/rancher#13048

--- a/app/styles/components/_dropdown.scss
+++ b/app/styles/components/_dropdown.scss
@@ -26,7 +26,7 @@ $dropdown-caret-color                : $mid-grey !default;
 // The dropdown menu (ul)
 .dropdown-menu {
   position: absolute;
-  z-index: 2;
+  z-index: 991; // DO NOT CHANGE UNLESS YOU ARE ALSO CHANGING dropdown-backdrop z-index
   top: 100%;
   left: auto;
   display: none; // none by default, but block on "open" of the menu
